2022-07-09  [1.42 Bld 225]

- Addition    : Add HP Nano Processor target (contribution by Haruo Asano)
- Change      : No longer provide manual as PostScript (may be generated
                from PDF version or from doc_*/as.pdf target).

2022-07-03  [1.42 Bld 224]

- Addition    : Support PACKING for 56000, TMS320C3x/4x, TMS32060, 
                uPD7720/7725, and uPD77230
- Bugfix      : DATA on uPD7720/7725 in packed mode behaves the same
                way as DW for uPD77230, i.e. characters are filled in
                from left to right into words
- Bugfix      : Correct INS/EXT on V30 with immediate operand
- Bugfix      : On V30, allow CY as operand to NOT1/CLR1/SET1

2022-06-15 [1.42 Bld 223]

- Addition    : Support PACKING for MN1610 (contribution by Haruo Asano)
                and CP1600 (contribution by Kasumi Yoshino)
- Addition    : Support floating point constants for MN1610 (contribution by Haruo Asano)
- Addition    : 68HC11K4: ASSUME may be informed about the values
                of CONFIG, INIT and INIT2 registers
- Addition    : Z180: Value of CBAR, CBR, and BBR may be specified
                via ASSUME, to define the 64K -> 512K address mapping

2022-03-16 [1.42 Bld 222]

- Bugfix      : -supmode command line switch works again
- Bugfix      : Z8000: correct register overlap check for PUSH/POP

2022-03-12 [1.42 Bld 221]

- Bugfix      : 68K: allow k factor to FMOVE on dest operand

2022-02-13 [1.42 Bld 220]

- Bugfix      : correct MCS-96 RST instruction (was 'RSC' instead)
- Change      : MCS-96: change a few 32 bit operand alignment warnings
                to errors, to make consistent with 16 bit alignment
                errors

2022-02-09 [1.42 Bld 219]

- Bugfix      : Symbols without assigned address space did not appear
                in MAP file

2022-02-02 [1.42 Bld 218]

- Addition    : add DEFBIT for uPD7807...7809
- Change      : A couple of target-specific symbols now only appear